fix ScrollUpButton z-index

--- a/src/Components/ScrollUpButton/styles.scss
+++ b/src/Components/ScrollUpButton/styles.scss
@@ -12,6 +12,7 @@
   bottom: 2rem;
   right: 2rem;
   transition: .2s;
+  z-index: 1;
 }
 
 .scrollup-button:hover {
